Add FD greens to the Lobby Contest Enter buttons

--- a/client/lib/stylesheets/custom.bootstrap.import.less
+++ b/client/lib/stylesheets/custom.bootstrap.import.less
@@ -153,9 +153,10 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+@btn-default-color:              white;
+@btn-default-bg:                 #8ccc3e; // fduel green
+@btn-default-border:             #65ae15; // fduel green
+@btn-default-bg-hover:           #98d152; // fduel green
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
