--- a/client/templates/lobby/contestFilterContainer.html
+++ b/client/templates/lobby/contestFilterContainer.html
@@ -7,19 +7,19 @@
             <div class='col-xs-7 vAlign'><h5 class='center whiteText'>SPORT</h5></div>
             <div class='col-xs-16 vAlign'>
               <div class='row'>
-                <div class='col-xs-24'>ALL</div>
+                <div class='col-xs-24 whiteText'>ALL</div>
               </div>
               <div class='row'>
-                <div class='col-xs-8'>NFL</div>
-                <div class='col-xs-8'>NBA</div>
-                <div class='col-xs-8'>NHL</div>
+                <div class='col-xs-8 whiteText'>NFL</div>
+                <div class='col-xs-8 whiteText'>NBA</div>
+                <div class='col-xs-8 whiteText'>NHL</div>
               </div>
             </div>
           </div>
         </div>
         <div class='col-xs-8 rBorder primaryBorderColor solidBorder'>
           <div class='row contestFilterRow'>
-            <div class='col-xs-7 vAlign'><h5 class='center whiteText'>BUY-IN</h5></div>
+            <div class='col-xs-7 vAlign'><h5 class='center whiteText'>ENTRY</h5></div>
           </div>
         </div>
         <div class='col-xs-8'>
