--- a/client/templates/lobby/lobby.sass
+++ b/client/templates/lobby/lobby.sass
@@ -4,3 +4,19 @@
 
 #contestResultsTable
   height: 500px // set a fixed height so the custom scrollbar takes effect
+
+.contestIcons
+  padding-top: 9px
+
+.contestGuaranteedPayIcon
+  color: white
+  background-color: gray
+  padding: 2px 5px
+
+.contestMultiEntryIcon
+  color: white
+  background-color: gray
+  padding: 2px 5px
+
+.contestResultItem
+  height: 38px
