Add Lobby Modal with Contest Name

--- a/client/templates/lobby/lobby.sass
+++ b/client/templates/lobby/lobby.sass
@@ -20,3 +20,8 @@
 
 .contestResultItem
   height: 38px
+
+// currently used to compensate for table header over contestResultItem
+// this pushed the first resultItem down 20px so it can be seen
+.contestResultsBlankItem
+  height: 20px
