--- a/client/lib/stylesheets/helper.sass
+++ b/client/lib/stylesheets/helper.sass
@@ -1,126 +1,131 @@
 .vAlign
-    position: relative
-    top: 50%
-    -ms-transform: translateY(-50%)
-    -webkit-transform: translateY(-50%)
-    transform: translateY(-50%)
+  position: relative
+  top: 50%
+  -ms-transform: translateY(-50%)
+  -webkit-transform: translateY(-50%)
+  transform: translateY(-50%)
 
 // Headspace
 .headspace-0
-    margin-top: 0
+  margin-top: 0
 
 .headspace-5
-    margin-top: 5px
+  margin-top: 5px
 
 .headspace-10
-    margin-top: 10px
+  margin-top: 10px
 
 .headspace-15
-    margin-top: 15px
+  margin-top: 15px
 
 .headspace-20
-    margin-top: 20px
+  margin-top: 20px
 
 .headspace-30
-    margin-top: 30px
+  margin-top: 30px
 
 .headspace-40
-    margin-top: 40px
+  margin-top: 40px
 
 .headspace-50
-    margin-top: 50px
+  margin-top: 50px
 
 .headspace-60
-    margin-top: 60px
+  margin-top: 60px
 
 .headspace-80
-    margin-top: 80px
+  margin-top: 80px
 
 .footspace-0
-    margin-bottom: 0
+  margin-bottom: 0
 
 .footspace-5
-    margin-bottom: 5px
+  margin-bottom: 5px
 
 .footspace-10
-    margin-bottom: 10px
+  margin-bottom: 10px
 
 .footspace-15
-    margin-bottom: 15px
+  margin-bottom: 15px
 
 .footspace-20
-    margin-bottom: 20px
+  margin-bottom: 20px
 
 .footspace-40
-    margin-bottom: 40px
+  margin-bottom: 40px
 
 .footspace-30
-    margin-bottom: 30px
+  margin-bottom: 30px
 
 .footspace-50
-    margin-bottom: 50px
+  margin-bottom: 50px
 
 .footspace-60
-    margin-bottom: 60px
+  margin-bottom: 60px
 
 .footspace-80
-    margin-bottom: 80px
+  margin-bottom: 80px
 
 .leftSpace-10
-    margin-left: 10px
+  margin-left: 10px
 
 .leftSpace-20
-    margin-left: 20px
+  margin-left: 20px
 
 .leftSpace-30
-    margin-left: 30px
+  margin-left: 30px
 
 .rightSpace-10
-    margin-right: 10px
+  margin-right: 10px
 
 .rightSpace-20
-    margin-right: 20px
+  margin-right: 20px
 
 .rightSpace-30
-    margin-right: 30px
+  margin-right: 30px
 
 .paddingPlus-0
-    padding-right: 15px
-    padding-left: 15px
+  padding-right: 15px
+  padding-left: 15px
 
 .paddingPlus-10
-    padding-left: 25px
-    padding-right: 25px
+  padding-left: 25px
+  padding-right: 25px
 
 .paddingPlus-15
-    padding-left: 30px
-    padding-right: 30px
+  padding-left: 30px
+  padding-right: 30px
 
 .paddingPlus-20
-    padding-left: 35px
-    padding-right: 35px
+  padding-left: 35px
+  padding-right: 35px
 
 .paddingPlus-30
-    padding-left: 45px
-    padding-right: 45px
+  padding-left: 45px
+  padding-right: 45px
 
 .paddingPlus-40
-    padding-left: 55px
-    padding-right: 55px
+  padding-left: 55px
+  padding-right: 55px
 
 .paddingPlus-50
-    padding-left: 65px
-    padding-right: 65px
+  padding-left: 65px
+  padding-right: 65px
 
 .paddingTB-5
-    padding-top: 5px
-    padding-bottom: 5px
+  padding-top: 5px
+  padding-bottom: 5px
 
 .paddingTB-8
-    padding-top: 8px
-    padding-bottom: 8px
+  padding-top: 8px
+  padding-bottom: 8px
 
 .paddingTB-10
-    padding-top: 10px
-    padding-bottom: 10px
+  padding-top: 10px
+  padding-bottom: 10px
 
+.paddingT-10
+  padding-top: 10px
+
+.paddingB-10
+  padding-bottom: 10px
