--- a/client/templates/lobby/contestResultsContainer.jade
+++ b/client/templates/lobby/contestResultsContainer.jade
@@ -1,4 +1,5 @@
 template(name="contestResultsContainer")
+  +contestDetailsModal
   div(id="contestResultsContainer" class='col-xs-24')
     div(class="row")
       div(id='contestResultsTableContainer' class='col-xs-24')
@@ -11,9 +12,10 @@ template(name="contestResultsContainer")
           div(class='col-xs-4') Starts (ET)
         div(class='row')
           div(id='contestResultsTable' class='col-xs-24')
-            +each contests
+            div(class='row contestResultsBlankItem')
+            +each contestsFake
               div(class='row contestResultItem size-12 vAlign')
-                div(class='col-xs-7 paddingTB-10') #{contestName}
+                div(class='col-xs-7 paddingTB-10' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{contestName}
                 div(class='col-xs-2 paddingTB-10') #{entries}
                 div(class='col-xs-2 paddingTB-10') #{size}
                 div(class='col-xs-2 paddingTB-10') $#{entryFee}
