--- a/client/templates/lobby/contestResultsContainer.jade
+++ b/client/templates/lobby/contestResultsContainer.jade
@@ -1,5 +1,4 @@
 template(name="contestResultsContainer")
-  +contestDetailsModal
   div(id="contestResultsContainer" class='col-xs-24')
     div(class="row")
       div(id='contestResultsTableContainer' class='col-xs-24')
@@ -14,23 +13,6 @@ template(name="contestResultsContainer")
           div(id='contestResultsTable' class='col-xs-24')
             div(class='row contestResultsBlankItem')
             +each contestsFake
-              div(class='row contestResultItem size-12 vAlign')
-                div(class='col-xs-7 paddingTB-10' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{contestName}
-                div(class='col-xs-2 paddingTB-10') #{entries}
-                div(class='col-xs-2 paddingTB-10') #{size}
-                div(class='col-xs-2 paddingTB-10') $#{entryFee}
-                div(class='col-xs-2 paddingTB-10') $#{prizes}
-                div(class='col-xs-3 paddingTB-10') {{momentify starts}}
-                +if guaranteedPrizes
-                  div(class='col-xs-1 contestIcons')
-                    span(class='contestGuaranteedPayIcon') G
-                +else
-                  div(class='col-xs-1')
-                +if multipleEntries
-                  div(class='col-xs-1 contestIcons')
-                    span(class='contestMultiEntryIcon') M
-                +else
-                  div(class='col-xs-1')
-                div(class='col-xs-2')
-                div(class='col-xs-2 paddingTB-5')
-                  button(class='btn btn-default btn-sm') ENTER
+              +contestResultsItem
+              +contestDetailsModal
+              //- TODO: Refactor out this modal duplication
