Wire up a dummy contest page with fixture data, wiring in the UI

--- a/client/lib/stylesheets/custom.bootstrap.z-customStyles.less
+++ b/client/lib/stylesheets/custom.bootstrap.z-customStyles.less
@@ -1,4 +1,4 @@
-// MODIFY THIS!
+// YOU CAN MODIFY THIS TO OVERWRITE BOOTSTRAP STYLES
 // Overwrite the base Bootstrap styles here
 
 @import "custom.bootstrap.import.less";
