--- a/client/templates/lobby/contestResultsItem.jade
+++ b/client/templates/lobby/contestResultsItem.jade
@@ -18,4 +18,4 @@ template(name="contestResultsItem")
       div(class='col-xs-1')
     div(class='col-xs-2')
     div(class='col-xs-2 paddingTB-5')
-      button(class='btn btn-default btn-sm') ENTER
+      a(class='btn btn-default btn-sm' href='contest/1234') ENTER
