--- a/client/templates/lobby/contestResultsItem.jade
+++ b/client/templates/lobby/contestResultsItem.jade
@@ -1,21 +1,21 @@
 template(name="contestResultsItem")
-  div(class='row contestResultItem size-12 vAlign')
-    div(class='col-xs-7 paddingTB-10' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{contestName}
-    div(class='col-xs-2 paddingTB-10' id='entriesBootbox') #{entries}
-    div(class='col-xs-2 paddingTB-10') #{size}
-    div(class='col-xs-2 paddingTB-10') $#{entryFee}
-    div(class='col-xs-2 paddingTB-10') $#{prizes}
-    div(class='col-xs-3 paddingTB-10') {{momentify starts}}
+  div(class='row contestResultItem size-12')
+    div(class='col-xs-7 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{contestName}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{entries}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') #{size}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') $#{entryFee}
+    div(class='col-xs-2 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') $#{prizes}
+    div(class='col-xs-3 vAlign contestDetailsModal' data-toggle='modal' data-target='#contestDetailsModal' data-name='#{contestName}') {{momentify starts}}
     +if guaranteedPrizes
-      div(class='col-xs-1 contestIcons')
+      div(class='col-xs-1 contestIcons vAlign')
         span(class='contestGuaranteedPayIcon') G
     +else
       div(class='col-xs-1')
     +if multipleEntries
-      div(class='col-xs-1 contestIcons')
+      div(class='col-xs-1 contestIcons vAlign')
         span(class='contestMultiEntryIcon') M
     +else
       div(class='col-xs-1')
     div(class='col-xs-2')
-    div(class='col-xs-2 paddingTB-5')
+    div(class='col-xs-2 contestEnterButton vAlign')
       a(class='btn btn-default btn-sm' href='contest/1234') ENTER
