--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -18,17 +18,28 @@ template(name='contestLineupContainer')
       div(class='col-xs-12')
         h2 Available Players
         div(class='row')
-          div(class='col-xs-1') All
-          div(class='col-xs-1') QB
-          div(class='col-xs-1') RB
-          div(class='col-xs-1') WR
-          div(class='col-xs-1') TE
-          div(class='col-xs-1') K
-          div(class='col-xs-1') D
-          div(class='col-xs-3-offset-2') SEARCH HERE
+          div(class='col-xs-2') All
+          div(class='col-xs-2') QB
+          div(class='col-xs-2') RB
+          div(class='col-xs-2') WR
+          div(class='col-xs-2') TE
+          div(class='col-xs-2') K
+          div(class='col-xs-2') D
+          div(class='col-xs-6-offset-4') SEARCH HERE
         each availablePlayers
           +playerListTextSimple
           +playerSuperstarMe
       div(class='col-xs-12')
-        h2 Your Lineup (Placeholder)
+        div(class='row')
+          div(class='col-xs-10')
+            h2 Your Lineup (Placeholder)
+          div(class='col-xs-2')
+          div(class='col-xs-6')
+            h2 $#{salaryRemaining}
+          div(class='col-xs-6')
+            h2 $#{salaryRemainingAvg}
         +superstarsFeed
+
+template(name='lineupCard')
+  div(class='row')
+    div(class='col-xs-12')
