--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -17,7 +17,7 @@ template(name='contestLineupContainer')
     div(class='row')
       div(class='col-xs-12')
         h2 Available Players
-        div(class='row')
+        div(class='row player-list-table-position-filters')
           div(class='col-xs-2') All
           div(class='col-xs-2') QB
           div(class='col-xs-2') RB
@@ -26,9 +26,24 @@ template(name='contestLineupContainer')
           div(class='col-xs-2') K
           div(class='col-xs-2') D
           div(class='col-xs-6-offset-4') SEARCH HERE
-        each availablePlayers
-          +playerListTextSimple
-          +playerSuperstarMe
+        div(class='row player-list-table-header')
+          div(class='col-xs-8') Name
+          div(class='col-xs-3') FPPG
+          div(class='col-xs-3') Played
+          div(class='col-xs-5') Game
+          div(class='col-xs-3') Salary
+          div(class='col-xs-2')
+        div(class='row')
+          div(id='player-list-table' class='col-xs-24')
+            each availablePlayers
+              div(class='row player-list-item size-12')
+                div(class='col-xs-2 player-position vAlign') #{position}
+                div(class='col-xs-6 player-name vAlign') #{full_name}
+                div(class='col-xs-3 player-fppg vAlign') 12.3
+                div(class='col-xs-3 player-played vAlign') 13
+                div(class='col-xs-5 player-slate vAlign') CIN @ PIT
+                div(class='col-xs-3 player-salary vAlign') $8,900
+                div(class='col-xs-2 player-add vAlign') (+)
       div(class='col-xs-12')
         div(class='row')
           div(class='col-xs-10')
