--- a/client/templates/contests/contests.sass
+++ b/client/templates/contests/contests.sass
@@ -3,3 +3,10 @@
 
 #player-list-table
   height: 600px
+
+.lineup-player-selection
+  height: 60px
+
+.lineup-table
+  border: 1px solid grey
+  border-radius: 15px
