Add remove ability to Available Players view

--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -63,7 +63,7 @@ template(name='contestLineupContainer')
                   div(class='col-xs-2 lineup-player-position vAlign') #{position}
                   div(class='col-xs-6 lineup-player-name vAlign') #{full_name}
                   div(class='col-xs-2 lineup-player-salary vAlign') $4,500
-                  div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign') (x)
+                  div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign') (-)
               else
                 div(class='row lineup-player-selection')
                   div(class='col-xs-4 lineup-player-image vAlign')
