--- a/client/templates/contests/contests.sass
+++ b/client/templates/contests/contests.sass
@@ -11,6 +11,10 @@
   border: 1px solid grey
   border-radius: 15px
 
-  .playerPhoto
+  .player-photo
     height: 50px
     width: 68px
+
+  .player-photo-anonymous
+    height: 50px
+    width: 50px
