Add Position Filters

--- a/client/templates/contestLists/historyContestList/historyContests.jade
+++ b/client/templates/contestLists/historyContestList/historyContests.jade
@@ -2,7 +2,7 @@ template(name='historyContestListContainer')
   div(class='history-contest-list')
     div(class='col-xs-24')
       div(class='row')
-        h1(id='history-contest-title' class='col-xs-16') Entry History
+        h1(id='history-contest-title' class='col-xs-16') Entry history
       div(class='row')
         h4(class='col-xs-8') You have #{ historyEntriesCount } contest entries in your history.
       div(class='row')
