--- a/client/templates/contestLists/liveContestList/liveContests.jade
+++ b/client/templates/contestLists/liveContestList/liveContests.jade
@@ -2,7 +2,7 @@ template(name='liveContestListContainer')
   div(class='live-contest-list')
     div(class='col-xs-24')
       div(class='row')
-        h1(id='live-contest-title' class='col-xs-16') live Contests
+        h1(id='live-contest-title' class='col-xs-16') Live entries
       div(class='row')
         h4(class='col-xs-8') You have #{ liveEntriesCount } contest entries live.
       div(class='row')
