--- a/client/lib/stylesheets/helper.css
+++ b/client/lib/stylesheets/helper.css
@@ -75,8 +75,22 @@
     letter-spacing: .5px
 }
 
+.size-13 {
+    font-size: 13px;
+    letter-spacing: .5px
+}
+
+.size-14 {
+    font-size: 14px;
+    letter-spacing: .5px
+}
+
 .size-16 {
     font-size: 16px
+}
+
+.size-22 {
+    font-size: 22px
 }
 
 /*BORDERS*/
