--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -13,41 +13,46 @@ template(name='contestSlateContainer')
         div(class='col-xs-2') #{gameName} {{momentify starts 'shortTime'}}
 
 template(name='contestLineupContainer')
-  div(class='col-xs-24')
+  div(class='contestLineupContainer col-xs-24')
     div(class='row')
       div(class='col-xs-12')
         h2 Available Players
         div(class='row player-list-table-position-filters')
-          div(class='col-xs-2') All
-          div(class='col-xs-2') QB
-          div(class='col-xs-2') RB
-          div(class='col-xs-2') WR
-          div(class='col-xs-2') TE
-          div(class='col-xs-2') K
-          div(class='col-xs-2') D
+          div(class='col-xs-2 position-filter') All
+          div(class='col-xs-2 position-filter') QB
+          div(class='col-xs-2 position-filter') RB
+          div(class='col-xs-2 position-filter') WR
+          div(class='col-xs-2 position-filter') TE
+          div(class='col-xs-2 position-filter') K
+          div(class='col-xs-2 position-filter') D
           div(class='col-xs-6-offset-4') SEARCH HERE
         div(class='row player-list-table-header')
           div(class='col-xs-8') Name
-          div(class='col-xs-3') FPPG
-          div(class='col-xs-3') Played
+          div(class='col-xs-2') FPPG
+          div(class='col-xs-2') Played
           div(class='col-xs-5') Game
-          div(class='col-xs-3') Salary
+          div(class='col-xs-2') Salary
           div(class='col-xs-2')
-        div(class='row')
+        div(id='player-list-table-container' class='row')
           div(id='player-list-table' class='col-xs-24')
             each availablePlayers
-              div(class='row player-list-item size-12')
+              div(class='row player-list-item size-13')
                 div(class='col-xs-2 player-position vAlign') #{position}
                 div(class='col-xs-6 player-name vAlign') #{full_name}
-                div(class='col-xs-3 player-fppg vAlign') 12.3
-                div(class='col-xs-3 player-played vAlign') 13
+                div(class='col-xs-2 player-fppg vAlign') 12.3
+                div(class='col-xs-2 player-played vAlign') 13
                 div(class='col-xs-5 player-slate vAlign') CIN @ PIT
-                div(class='col-xs-3 player-salary vAlign') $4,500
-                div(class='col-xs-2 player-add vAlign') (+)
+                div(class='col-xs-2 player-salary vAlign') $4,500
+                if inCurrentLineup
+                  div(class='col-xs-2 col-xs-push-1 lineup-player-remove vAlign')
+                    i(class="fa fa-minus-circle fa-2x")
+                else
+                  div(class='col-xs-2 col-xs-push-1 lineup-player-add vAlign')
+                    i(class="fa fa-plus-circle fa-2x")
       div(class='col-xs-12')
         div(class='row')
           div(class='col-xs-10')
-            h2 Your Lineup (Placeholder)
+            h2 Your Lineup
           div(class='col-xs-2')
           div(class='col-xs-6')
             h2 $#{salaryRemaining}
@@ -57,23 +62,28 @@ template(name='contestLineupContainer')
           div(class='col-xs-24')
             each currentLineup
               if espn_id
-                div(class='row lineup-player-selection')
+                div(class='row lineup-player-selection size-13')
                   div(class='col-xs-4 lineup-player-image vAlign')
                     img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
                   div(class='col-xs-2 lineup-player-position vAlign') #{position}
                   div(class='col-xs-6 lineup-player-name vAlign') #{full_name}
                   div(class='col-xs-2 lineup-player-salary vAlign') $4,500
-                  div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign') (-)
+                  div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
+                    i(class="fa fa-minus-circle fa-2x")
               else
-                div(class='row lineup-player-selection')
+                div(class='row lineup-player-selection size-13')
                   div(class='col-xs-4 lineup-player-image vAlign')
                     img(class='player-photo-anonymous' src='/images/anonymous_player.png')
-                  div(class='col-xs-8 lineup-player-position vAlign') ADD #{this}
-            div(class='row lineup-player-clear-all-selections')
-              div(class='col-xs-6 col-xs-push-18 ') (x) Clear All
-            div(class='row lineup-player-clear-all-selections')
+                  div(class='col-xs-8 lineup-player-position vAlign')
+                    span #{this}
+                    span(class='lineup-empty-spot') ADD PLAYER
+            div(class='row lineup-clear-all-selections size-12')
+              div(class='col-xs-6 col-xs-push-18 ')
+                i(class="fa fa-minus-circle fa-2x size-13")
+                span Clear All
+            div(class='row lineup-player-enter')
               div(class='col-xs-6 col-xs-push-18')
-                div(class='btn btn-default btn-sm contest-entry') Enter
+                div(class='btn btn-default btn-lg contest-entry') Enter
 
 template(name='lineupCard')
   div(class='row')
