--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -18,13 +18,13 @@ template(name='contestLineupContainer')
       div(class='col-xs-12')
         h2 Available Players
         div(class='row player-list-table-position-filters')
-          div(class='col-xs-2 position-filter') All
-          div(class='col-xs-2 position-filter') QB
-          div(class='col-xs-2 position-filter') RB
-          div(class='col-xs-2 position-filter') WR
-          div(class='col-xs-2 position-filter') TE
-          div(class='col-xs-2 position-filter') K
-          div(class='col-xs-2 position-filter') D
+          div(class='col-xs-2 position-filter pointer') All
+          div(class='col-xs-2 position-filter pointer') QB
+          div(class='col-xs-2 position-filter pointer') RB
+          div(class='col-xs-2 position-filter pointer') WR
+          div(class='col-xs-2 position-filter pointer') TE
+          div(class='col-xs-2 position-filter pointer') K
+          div(class='col-xs-2 position-filter pointer') D
           div(class='col-xs-6-offset-4') SEARCH HERE
         div(class='row player-list-table-header')
           div(class='col-xs-8') Name
@@ -36,7 +36,7 @@ template(name='contestLineupContainer')
         div(id='player-list-table-container' class='row')
           div(id='player-list-table' class='col-xs-24')
             each availablePlayers
-              div(class='row player-list-item size-13')
+              div(class='row player-list-item size-13 {{#if inCurrentLineup}}selected-player{{/if}}')
                 div(class='col-xs-2 player-position vAlign') #{position}
                 div(class='col-xs-6 player-name vAlign') #{full_name}
                 div(class='col-xs-2 player-fppg vAlign') 12.3
@@ -45,10 +45,10 @@ template(name='contestLineupContainer')
                 div(class='col-xs-2 player-salary vAlign') $4,500
                 if inCurrentLineup
                   div(class='col-xs-2 col-xs-push-1 lineup-player-remove vAlign')
-                    i(class="fa fa-minus-circle fa-2x")
+                    i(class="fa fa-minus-circle fa-2x pointer")
                 else
                   div(class='col-xs-2 col-xs-push-1 lineup-player-add vAlign')
-                    i(class="fa fa-plus-circle fa-2x")
+                    i(class="fa fa-plus-circle fa-2x pointer")
       div(class='col-xs-12')
         div(class='row')
           div(class='col-xs-10')
@@ -69,16 +69,16 @@ template(name='contestLineupContainer')
                   div(class='col-xs-6 lineup-player-name vAlign') #{full_name}
                   div(class='col-xs-2 lineup-player-salary vAlign') $4,500
                   div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
-                    i(class="fa fa-minus-circle fa-2x")
+                    i(class="fa fa-minus-circle fa-2x pointer")
               else
-                div(class='row lineup-player-selection size-13')
+                div(class='row lineup-player-selection player-empty size-13')
                   div(class='col-xs-4 lineup-player-image vAlign')
                     img(class='player-photo-anonymous' src='/images/anonymous_player.png')
                   div(class='col-xs-8 lineup-player-position vAlign')
                     span #{this}
-                    span(class='lineup-empty-spot') ADD PLAYER
+                    span(class='lineup-empty-name') ADD PLAYER
             div(class='row lineup-clear-all-selections size-12')
-              div(class='col-xs-6 col-xs-push-18 ')
+              div(class='col-xs-6 col-xs-push-18 pointer')
                 i(class="fa fa-minus-circle fa-2x size-13")
                 span Clear All
             div(class='row lineup-player-enter')
