--- a/client/lib/stylesheets/helper.css
+++ b/client/lib/stylesheets/helper.css
@@ -70,6 +70,11 @@
     letter-spacing: .5px
 }
 
+.size-11 {
+    font-size: 11px;
+    letter-spacing: .5px
+}
+
 .size-12 {
     font-size: 12px;
     letter-spacing: .5px
