--- a/client/templates/contests/contests.jade
+++ b/client/templates/contests/contests.jade
@@ -15,32 +15,40 @@ template(name='contestSlateContainer')
 template(name='contestLineupContainer')
   div(class='contestLineupContainer col-xs-24')
     div(class='row')
-      div(class='col-xs-12')
+      div(class='col-xs-13')
         h2 Available Players
-        div(class='row player-list-table-position-filters')
-          div(class='col-xs-2 position-filter pointer') All
-          div(class='col-xs-2 position-filter pointer') QB
-          div(class='col-xs-2 position-filter pointer') RB
-          div(class='col-xs-2 position-filter pointer') WR
-          div(class='col-xs-2 position-filter pointer') TE
-          div(class='col-xs-2 position-filter pointer') K
-          div(class='col-xs-2 position-filter pointer') D
-          div(class='col-xs-6-offset-4') SEARCH HERE
-        div(class='row player-list-table-header')
-          div(class='col-xs-8') Name
-          div(class='col-xs-2') FPPG
-          div(class='col-xs-2') Played
-          div(class='col-xs-5') Game
-          div(class='col-xs-2') Salary
-          div(class='col-xs-2')
+        div(class='row player-list-table-position-filters size-13 pointer')
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') All
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') QB
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') RB
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') WR
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') TE
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') K
+          div(class='col-xs-2 position-filter-tab')
+            div(class='position-filter vAlign') D
+          div(class='col-xs-6 col-xs-push-4 position-filter-tab')
+            div(class='position-filter vAlign') Player search...
+        div(class='row player-list-table-header size-12')
+          div(class='col-xs-8 player-list-table-title vAlign') Name
+          div(class='col-xs-3 player-list-table-title vAlign') FPPG
+          div(class='col-xs-3 player-list-table-title vAlign') Played
+          div(class='col-xs-5 player-list-table-title vAlign') Game
+          div(class='col-xs-2 player-list-table-title vAlign') Salary
+          div(class='col-xs-2 player-list-table-title vAlign')
         div(id='player-list-table-container' class='row')
           div(id='player-list-table' class='col-xs-24')
             each availablePlayers
               div(class='row player-list-item size-13 {{#if inCurrentLineup}}selected-player{{/if}}')
                 div(class='col-xs-2 player-position vAlign') #{position}
                 div(class='col-xs-6 player-name vAlign') #{full_name}
-                div(class='col-xs-2 player-fppg vAlign') 12.3
-                div(class='col-xs-2 player-played vAlign') 13
+                div(class='col-xs-3 player-fppg vAlign') 12.3
+                div(class='col-xs-3 player-played vAlign') 13
                 div(class='col-xs-5 player-slate vAlign') CIN @ PIT
                 div(class='col-xs-2 player-salary vAlign') $4,500
                 if inCurrentLineup
@@ -49,7 +57,7 @@ template(name='contestLineupContainer')
                 else
                   div(class='col-xs-2 col-xs-push-1 lineup-player-add vAlign')
                     i(class="fa fa-plus-circle fa-2x pointer")
-      div(class='col-xs-12')
+      div(class='col-xs-10 col-xs-push-1')
         div(class='row')
           div(class='col-xs-10')
             h2 Your Lineup
@@ -66,7 +74,7 @@ template(name='contestLineupContainer')
                   div(class='col-xs-4 lineup-player-image vAlign')
                     img(class='player-photo' src= "{{ playerImageESPN espn_id = espn_id espn_size = 'micro'}}")
                   div(class='col-xs-2 lineup-player-position vAlign') #{position}
-                  div(class='col-xs-6 lineup-player-name vAlign') #{full_name}
+                  div(class='col-xs-8 lineup-player-name vAlign') #{full_name}
                   div(class='col-xs-2 lineup-player-salary vAlign') $4,500
                   div(class='col-xs-2 col-xs-push-2 lineup-player-remove vAlign')
                     i(class="fa fa-minus-circle fa-2x pointer")
@@ -74,12 +82,12 @@ template(name='contestLineupContainer')
                 div(class='row lineup-player-selection player-empty size-13')
                   div(class='col-xs-4 lineup-player-image vAlign')
                     img(class='player-photo-anonymous' src='/images/anonymous_player.png')
-                  div(class='col-xs-8 lineup-player-position vAlign')
+                  div(class='col-xs-12 lineup-player-position vAlign')
                     span #{this}
-                    span(class='lineup-empty-name') ADD PLAYER
-            div(class='row lineup-clear-all-selections size-12')
-              div(class='col-xs-6 col-xs-push-18 pointer')
-                i(class="fa fa-minus-circle fa-2x size-13")
+                    span(class='lineup-empty-name col-xs-push-1') ADD PLAYER
+            div(class='row lineup-clear-all size-12')
+              div(class='col-xs-6 col-xs-push-18 pointer vAlign')
+                i(class="fa fa-minus-circle size-13")
                 span Clear All
             div(class='row lineup-player-enter')
               div(class='col-xs-6 col-xs-push-18')
