wire up fixture adding with event selection

--- a/client/templates/contests/create/contestCreate.jade
+++ b/client/templates/contests/create/contestCreate.jade
@@ -2,6 +2,10 @@ template(name='contestCreate')
   div(class='col-xs-24')
     div(class='row')
       h1(id='contest-title' class='col-xs-16') Create Contest
-    div(class='row')
+    div(class='row col-xs-8')
       +each events
-        div {{momentify scheduled}} #{home} #{away}
+        div(class='event-options') {{momentify scheduled}} #{home} #{away}
+      div(class='btn btn-lg btn-default create-fixture') Create Fixture
+    div(class='row col-xs-8')
+      +each fixtures
+        div {{_id}}
