--- a/client/templates/layouts/navLayout/navLayout.html
+++ b/client/templates/layouts/navLayout/navLayout.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-default navbar-thin-height" role="navigation">
       <div class="navbar-header">
         <a class="navbar-brand" href="{{ pathFor 'lobbyLayout' }}">
-          <img src='https://dm63aeeijtc75.cloudfront.net/app/images/victivLogo_notext.png'>
+          <img src='/images/icon.jpg'>
         </a>
       </div>
 
