--- a/client/templates/layouts/navLayout/navLayout.sass
+++ b/client/templates/layouts/navLayout/navLayout.sass
@@ -55,6 +55,10 @@ $progressbar-color: $highlightGreen
 .navbar-brand
   padding: 0 15px
 
+  img
+    width: 45px
+    height: 50px
+
 .navbar-nav li
   border-bottom: 4px solid light-gray // for transitioning the border, it needs to exist first!
 
