--- a/client/templates/lobby/contestResultsItem.jade
+++ b/client/templates/lobby/contestResultsItem.jade
@@ -16,6 +16,5 @@ template(name="contestResultsItem")
         span(class='contestMultiEntryIcon') M
     +else
       div(class='col-xs-1')
-    div(class='col-xs-2')
-    div(class='col-xs-2 contestEnterButton vAlign')
-      a(class='btn btn-default btn-sm' href='contest/1234/draftteam') ENTER
+    div(class='col-xs-2 col-xs-push-2 vAlign')
+      a(class='btn btn-default btn-sm contestEnterButton' href='contest/1234/draftteam') ENTER
