--- a/client/templates/contests/create/contestCreate.jade
+++ b/client/templates/contests/create/contestCreate.jade
@@ -1,15 +1,18 @@
 template(name='contestCreate')
   div(class='col-xs-24')
     div(class='row')
-      h1(id='contest-title' class='col-xs-16') Create Contest
+      h1(id='contest-title' class='col-xs-16') Fixtures Creation Tool
     div(class='row col-xs-8')
       h3 Events
-      +each events
-        div(class='event-options') {{momentify scheduled}} #{home} #{away}
+      +each allEvents
+        div(class='event-options') {{momentify startsAt}} #{home} #{away}
       div(class='btn btn-lg btn-default create-fixture') Create Fixture
     div(class='row col-xs-8')
       h3 Fixtures
       +each fixtures
         div
-          span {{ _id }}
+          span {{ momentify startsAt }}
           span {{ fixturesEventCount }} Events
+        +each fixturesEvents
+          div {{momentify startsAt}} #{home} #{away}
+
