and style for readability

--- a/client/templates/contests/create/contestCreate.jade
+++ b/client/templates/contests/create/contestCreate.jade
@@ -11,7 +11,8 @@ template(name='contestCreate')
       h3 Fixtures
       +each fixtures
         div
-          span {{ momentify startsAt }}
+          span
+            h4 {{ momentify startsAt }}
           span {{ fixturesEventCount }} Events
         +each fixturesEvents
           div {{momentify startsAt}} #{home} #{away}
