--- a/client/templates/contests/create/fixtureCreate.jade
+++ b/client/templates/contests/create/fixtureCreate.jade
@@ -1,4 +1,4 @@
-template(name='contestCreate')
+template(name='fixtureCreate')
   div(class='col-xs-24')
     div(class='row')
       h1(id='contest-title' class='col-xs-16') Fixtures Creation Tool
@@ -12,8 +12,7 @@ template(name='contestCreate')
       +each fixtures
         div
           span
-            h4 {{ momentify startsAt }}
-          span {{ fixturesEventCount }} Events
+            h4 {{ momentify startsAt }}: {{ fixturesEventCount }} Events
         +each fixturesEvents
-          div {{momentify startsAt}} #{home} #{away}
+          div {{momentify startsAt}} #{away} @ #{home}
 
