add Event Creation from Fixtures page

--- a/client/templates/layouts/contest/contestCreateLayout.jade
+++ b/client/templates/layouts/contest/contestCreateLayout.jade
@@ -1,5 +1,5 @@
-template(name='fixtureCreateLayout')
-  div(class='fixture-create-container')
+template(name='contestCreateLayout')
+  div(class='contest-create-container')
     div(class='col-xs-24')
       div(class='row')
-        +fixtureCreate
+        +contestCreate
