--- a/client/templates/layouts/navLayout/navLayout.html
+++ b/client/templates/layouts/navLayout/navLayout.html
@@ -10,12 +10,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div>
         <ul class="nav navbar-nav">
-          <li class="{{ isActiveRoute regex='lobbyLayout' }}"><a href="{{ pathFor 'lobbyLayout' }}">Lobby</a></li>
-          <li class="{{ isActiveRoute regex='chatterLayout' }}"><a href="{{ pathFor 'chatterLayout' }}">Chatter</a></li>
-          <li class="{{ isActiveRoute regex='nflPlayersListLayout' }}"><a href="{{ pathFor 'nflPlayersListLayout' }}">Players</a></li>
-          <li class="{{ isActiveRoute regex='upcomingContestListLayout' }}"><a href="{{ pathFor 'upcomingContestListLayout' }}">Upcoming</a></li>
-          <li class="{{ isActiveRoute regex='liveContestListLayout' }}"><a href="{{ pathFor 'liveContestListLayout' }}">Live</a></li>
-          <li class="{{ isActiveRoute regex='historyContestListLayout' }}"><a href="{{ pathFor 'historyContestListLayout' }}">History</a></li>
+          <li><a href="{{ pathFor 'lobbyLayout' }}" class="{{ isActiveRoute regex='lobbyLayout' }}">Lobby</a></li>
+          <li><a href="{{ pathFor 'chatterLayout' }}" class="{{ isActiveRoute regex='chatterLayout' }}">Chatter</a></li>
+          <li><a href="{{ pathFor 'nflPlayersListLayout' }}" class="{{ isActiveRoute regex='nflPlayersListLayout' }}">Players</a></li>
+          <li><a href="{{ pathFor 'upcomingContestListLayout' }}" class="{{ isActiveRoute regex='upcomingContestListLayout' }}">Upcoming</a></li>
+          <li><a href="{{ pathFor 'liveContestListLayout' }}" class="{{ isActiveRoute regex='liveContestListLayout' }}">Live</a></li>
+          <li><a href="{{ pathFor 'historyContestListLayout' }}" class="{{ isActiveRoute regex='historyContestListLayout' }}">History</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
