show all fixtures

--- a/client/templates/contests/create/contestCreate.jade
+++ b/client/templates/contests/create/contestCreate.jade
@@ -1,16 +1,25 @@
 template(name='contestCreate')
   div(class='col-xs-24')
     div(class='row') Sport
-      div(class='col-xs-24')
+      div(class='form-section')
         div(class='col-xs-3') NFL
         div(class='col-xs-3') CFB
         div(class='col-xs-3') CBB
         div(class='col-xs-3') NBA
         div(class='col-xs-3') NHL
     div(class='row') Date
-      select(name='fixture-select')
+      div(class='form-section')
+        select(name='contest-fixture-select')
+          +each fixtures
+            option(value='#{_id}') {{momentify startsAt "longDateTime"}}
         +each fixtures
-          option(value='#{_id}') {{momentify startsAt "longDateTime"}}
+          div(class='contest-fixtures expandable is-expanded')
+            h3
+              a Includes #{ fixturesEventCount } #{ sport } Games
+            +each fixturesEvents
+              ul
+                li {{momentify startsAt}} #{away} @ #{home}
+
     //- div(class='row')
     //-   div(class='col-xs-8')
     //-     h3 Fixtures
